--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -1,5 +1,7 @@
 {
-  "translations": {
-    "specificKey": "العربيه"
+  "translation": {
+    "home": {
+      "title": "مرحبا بكم في منصة المترجم"
+    }
   }
 }
