--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -1,5 +1,7 @@
 {
-  "translations": {
-    "specificKey": "english"
+  "translation": {
+    "home": {
+      "title": "Welcome to Almotarjim"
+    }
   }
 }
