--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -90,6 +90,17 @@
           "status": "status",
           "actions": "actions"
         }
+      },
+      "singleRequest": {
+        "basicInfo": "Basic Information",
+        "requestId": "Request id:",
+        "service": "Service:",
+        "translator:": "Translator:",
+        "status": "Status:",
+        "description": "Description:",
+        "attachments": "Attachments",
+        "downloadAll": "Download all",
+        "translations": "Translations"
       }
     }
   }
