--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -195,6 +195,8 @@
         "lastMessage": "اخر رسالة"
       },
       "requests": {
+        "chatWithUs": "الدردشه معنا",
+        "createRequest": "إضافه طلب جديد",
         "table": {
           "status": "حاله",
           "email": "البريد الالكترونى",
