--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -195,6 +195,8 @@
         "lastMessage": "last message"
       },
       "requests": {
+        "chatWithUs": "Chat with us",
+        "createRequest": "Create Request",
         "table": {
           "status": "Status",
           "email": "Email",
