--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -203,6 +203,37 @@
           "amount": "الكميه",
           "actions": "اجراءات"
         }
+      },
+      "singleRequest": {
+        "basicInfo": "المعلومات الأساسيه",
+        "requestId": "رقم الطلب:",
+        "service": "الخدمه:",
+        "agentName": "اسم الموظف",
+        "translator": "المترجم:",
+        "status": "الحاله:",
+        "description": "الوصف:",
+        "attachments": "المرفقات",
+        "downloadAll": "تنزيل جميع المرفقات",
+        "translations": "الترجمات",
+        "approve": "موافقة",
+        "assign": "تعيين",
+        "dialog": {
+          "alert": "هل أنت متأكد من إعادة فتح هذا الطلب؟",
+          "reopen": "إعادة فتح",
+          "anyNotes": "أى ملا حظات تريد اضافتها...",
+          "reassign": {
+            "alert": "هل تريد إعادة التعيين إلى مترجم آخر؟",
+            "desc": "هل أنت متأكد من إعادة تعيين هذا الطلب إلى مترجم آخر",
+            "chooseTranslator": "اختار المترجم...",
+            "reassign": "إعادة التعيين"
+          },
+          "approve": {
+            "alert": "هل أنت متأكد من إعادة فتح هذا الطلب؟",
+            "desc": "هل أنت متأكد من رغبتك في الموافقة على الملاحظة: هذا أمر دائم",
+            "cancel": "الغاء",
+            "approve": "موافقه"
+          }
+        }
       }
     }
   }
