--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -203,6 +203,37 @@
           "amount": "Amount",
           "actions": "Actions"
         }
+      },
+      "singleRequest": {
+        "basicInfo": "Basic Information",
+        "requestId": "Request id:",
+        "service": "Service:",
+        "agentName": "Agent Name",
+        "translator": "Translator:",
+        "status": "Status:",
+        "description": "Description:",
+        "attachments": "Attachments",
+        "downloadAll": "Download all",
+        "translations": "Translations",
+        "approve": "Approve",
+        "assign": "Assign",
+        "dialog": {
+          "alert": "Are your sure to reopen this request?",
+          "reopen": "Reopen",
+          "anyNotes": "Any notes you want to attach...",
+          "reassign": {
+            "alert": "Reassign to another translator?",
+            "desc": "Are your sure to reassign this request to another translator",
+            "chooseTranslator": "choose translator...",
+            "reassign": "Reassign"
+          },
+          "approve": {
+            "alert": "Are your sure to reopen this request?",
+            "desc": "Are you sure you want to approve note: this is permanent",
+            "cancel": "Cancel",
+            "approve": "Approve"
+          }
+        }
       }
     }
   }
