--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -198,9 +198,8 @@
         "chatWithUs": "Chat with us",
         "createRequest": "Create Request",
         "table": {
+          "title": "Title",
           "status": "Status",
-          "email": "Email",
-          "amount": "Amount",
           "actions": "Actions"
         }
       },
