--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -23,6 +23,9 @@
         "orDragAndDrop": "أو السحب والإفلات",
         "max": "الأعلى",
         "dropFilesToUpload": "قم بإسقاط الملفات للتحميل"
+      },
+      "table": {
+        "noResults": "لا يوجد نتائج"
       }
     },
     "home": {
