--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -26,12 +26,22 @@
       },
       "table": {
         "noResults": "لا يوجد نتائج"
+      },
+      "chat": {
+        "youAreStillInQueue": "أنت لا تزال في قائمة الانتظار..."
+      },
+      "footer": {
+        "copyright": "©{{year}}-المترجم. كل الحقوق محفوظة."
       }
     },
     "home": {
       "title": "مرحبا بكم في منصة المترجم",
-      "content": "Lorem ipsum dolor sit amet consectetur Placerat vel turpis est morbi pharetra tortor quis. Aenean enim faucibus fringilla i elementum malesuada. Praesent turpis facilisis ornarescelerisque necs",
-      "button": "إبدأ من هنا"
+      "content": "مرحبًا بك في مؤسسة المترجم الحديث للنسخ والتصوير! 🌐📚 لسنا مجرد مشروع؛ بل نحن قوة ديناميكية في خدمات الترجمة، نقدم حلولًا متقدمة يمكن الوصول إليها في أي وقت وفي أي مكان. انضم إلينا في تشكيل مستقبل الخدمات الترجمية! 💻🌍",
+      "button": "إبدأ من هنا",
+      "aboutUs": {
+        "title": "عن المترجم",
+        "description": "مؤسسة المترجم الحديث للنسخ والتصوير التابعة للسجل التجاري رقم 5855339388 هو مشروع قائم ساهمنا من خلاله بتقديم خدماتنا المطوّرة لأكبر عدد ممكن من الطلّاب. وبفعل التقدّم الرقمي الهائل الذي يشهده العالم في الوقت الحالي، أصبحت خدماتنا متوفّرة عن بُعد وفي أي وقت ."
+      }
     },
     "register": {
       "title": "مرحبا بكم في منصة المترجم",
@@ -149,10 +159,10 @@
           "reopen": "إعادة فتح",
           "anyNotes": "أى ملا حظات تريد اضافتها...",
           "reassign": {
-            "alert": "هل تريد إعادة التعيين إلى مترجم آخر؟",
-            "desc": "هل أنت متأكد من إعادة تعيين هذا الطلب إلى مترجم آخر",
+            "alert": "هل تريد تعيين إلى مترجم آخر؟",
+            "desc": "هل أنت متأكد من تعيين هذا الطلب إلى مترجم آخر",
             "chooseTranslator": "اختار المترجم...",
-            "reassign": "إعادة التعيين"
+            "reassign": "تعيين"
           },
           "approve": {
             "alert": "هل أنت متأكد من إعادة فتح هذا الطلب؟",
@@ -240,10 +250,10 @@
           "reopen": "إعادة فتح",
           "anyNotes": "أى ملا حظات تريد اضافتها...",
           "reassign": {
-            "alert": "هل تريد إعادة التعيين إلى مترجم آخر؟",
-            "desc": "هل أنت متأكد من إعادة تعيين هذا الطلب إلى مترجم آخر",
+            "alert": "هل تريد تعيين إلى مترجم آخر؟",
+            "desc": "هل أنت متأكد من تعيين هذا الطلب إلى مترجم آخر",
             "chooseTranslator": "اختار المترجم...",
-            "reassign": "إعادة التعيين"
+            "reassign": "تعيين"
           },
           "approve": {
             "alert": "هل أنت متأكد من إعادة فتح هذا الطلب؟",
